--- a/MPEI_Reminder.BLL/MPEI_Reminder.BLL.csproj
+++ b/MPEI_Reminder.BLL/MPEI_Reminder.BLL.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MessageSender.DAL\MessageSender.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
